[package]
name = "vim-graphical-preview"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vim_graphical_preview"
crate-type = ["cdylib"]        # Creates dynamic lib

[dependencies]
miniserde = "0.1"
magick_rust = { version = "0.20", features = ["disable-hdri"] }
regex = "1.10.3"
sha2 = "0.10"
which = "6"
nix = { version = "0.28", features = ["ioctl", "term"] }
flame = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
